# agent-audit

./: .env.example  .gitignore  FLOW.md  IMPLEMENTATION_STATUS.md  SLICES.md  accessibility-audit-agent-plan.md  pyproject.toml  sample.txt  test-debug-pr.txt
.tasks/: slice-5.md  slices.md
scripts/: save_fixtures.py
src/accessvision/: __init__.py  __main__.py  config.py  discovery.py  models.py  ranking.py
src/accessvision/analysis/: __init__.py  coordinates.py  merge.py  vision.py
src/accessvision/capture/: __init__.py  browser.py  pipeline.py  scraper.py
src/accessvision/output/: __init__.py  annotator.py  solution_pr.py
src/accessvision/prompts/: __init__.py  ranking.py  solution_pr.py  vision_audit.py
src/accessvision/report/: __init__.py  builder.py  template.html
tests/: conftest.py  test_annotator.py  test_capture.py  test_coordinates.py  test_discovery.py  test_e2e.py  test_merge.py  test_models.py  test_ranking.py  test_report.py  test_solution_pr.py  test_vision.py
tests/fixtures/: sample_a11y_tree.json  sample_axe_results.json  sample_element_map.json  sample_firecrawl_map.json  sample_firecrawl_scrape.json  sample_fix.md  sample_page_capture.json
