[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accessvision"
version = "0.1.0"
description = "AI-powered visual WCAG accessibility auditing"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "firecrawl-py>=0.0.16",
    "google-generativeai>=0.3.0",
    "pillow>=10.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
accessvision = "accessvision.__main__:main"
